bl30_manager: implement bl30_manager platform driver This small driver handle data from config.ini to the bootloader blob bl30(1).

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -17,6 +17,14 @@
 	/delete-node/ custom_maps;
 	/delete-node/ ir@8000;
 
+	bl30_manager {
+		compatible = "coreelec,bl30_manager";
+		status = "okay";
+		mbox-nums = <1>;
+		mbox-names = "ree2aocpu";
+		mbox-dests = <MAILBOX_AOCPU>;
+	};
+
 	meson-ir {
 		compatible = "amlogic,meson6-ir";
 		status = "okay";
