--- a/arch/arm64/boot/dts/amlogic/coreelec_g12a_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_g12a_common.dtsi
@@ -68,6 +68,10 @@
 		#mbox-cells = <1>;
 	};
 
+	bl30_manager {
+		mboxes = <&mbox_pl0 G12A_REE2AO_DEV>;
+	};
+
 	gpioleds {
 		/delete-node/ net_red;
 		/delete-node/ net_green;
