--- a/arch/arm64/boot/dts/amlogic/coreelec_g12b_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_g12b_common.dtsi
@@ -42,6 +42,10 @@
 		compatible = "amlogic, dim-g12b";
 	};
 
+	bl30_manager {
+		mboxes = <&mbox_pl G12B_REE2AO_DEV>;
+	};
+
 	meson-ir {
 		reg = <0x0 0xff808040 0x00 0x44>, /*Multi-format IR controller*/
 			<0x0 0xff808000 0x00 0x20>; /*Legacy IR controller*/
