video_sink: add amvideocap module If the frame rate is higher than 30 fps each second frame is captured.

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -46,6 +46,13 @@
 		status = "okay";
 	};
 
+	amvideocap {
+		compatible = "amlogic, amvideocap";
+		dev_name = "amvideocap.0";
+		status = "okay";
+		max_size = <34>; //34MB
+	};
+
 	dummy_venc: dummy_venc {
 		status = "disabled";
 	};
