dts: add support of t7_a311d2_beelink_gt_king_ii

--- a/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
@@ -1,6 +1,8 @@
 #include "coreelec_common.dtsi"
 
 / {
+	compatible = "amlogic, t7";
+
 	amhdmitx: amhdmitx{
 		vend_data: vend_data{ /* Should modified by Customer */
 			product_desc = "T7"; /* Max Chars: 16 */
