amremote: rename module and enable in dts

--- a/drivers/input/Makefile
+++ b/drivers/input/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-only
 
-MODULE_NAME = amlogic-input
+MODULE_NAME = meson-remote
 
 PR_FMT = $(subst amlogic-,,$(MODULE_NAME))
 PR_FMT_DEFINE="-Dpr_fmt(fmt)= \"[$(PR_FMT)]: \" fmt"
