dts: AM7/X4 add regulator to turn on USB do not specify alloc-ranges for 'linux,meson-fb' cma memory and let linux choose it because location is different for X4 Cube with 2GB and X4 Pro/Plus with 4GB other possible solution is to use 'memory@00000000' node for 2GB model which means 2 DTB files

--- a/arch/arm64/boot/dts/amlogic/sc2_s905x4_ugoos_am7.dts
+++ b/arch/arm64/boot/dts/amlogic/sc2_s905x4_ugoos_am7.dts
@@ -50,6 +50,17 @@
 	/delete-node/ cpu_opp_table1;
 	/delete-node/ cpu_opp_table2;
 	/delete-node/ cpu_opp_table3;
+
+	regulator-vbus_usb {
+		compatible = "regulator-fixed";
+		regulator-name = "vbus_usb";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+		gpio = <&gpio GPIOH_6 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+		regulator-boot-on;
+		regulator-always-on;
+	};
 };
 
 &ext_mdio {
