--- a/drivers/led/Makefile
+++ b/drivers/led/Makefile
@@ -13,3 +13,4 @@ $(MODULE_NAME)-$(CONFIG_AMLOGIC_LEDS_AW9523B) += leds-aw9523b.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_LEDS_STATE) += leds_state.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_LEDS_DCON)  += meson_led_unipolar_ctrl.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_LEDS_FD650) += fd650.o
+$(MODULE_NAME)-$(CONFIG_AMLOGIC_LEDS_BCT3236) += leds-bct3236.o
