--- a/arch/arm64/boot/dts/amlogic/sc2_s905x4_sei_smb_280_id5.dts
+++ b/arch/arm64/boot/dts/amlogic/sc2_s905x4_sei_smb_280_id5.dts
@@ -1,19 +1,24 @@
 #include "sc2_s905x4_4g_1gbit.dts"
 
 / {
-	model = "Homatics R 4K Plus";
-	coreelec-dt-id = "sc2_s905x4_homatics_r4kplus";
+	model = "Dune/Homatics R 4K Plus, Nokia 8010";
+	coreelec-dt-id = "sc2_s905x4_sei_smb_280_id5";
+	amlogic-dt-id = "sc2_s905x4_ah212-id5";
 
-	/delete-node/ gpioleds;
+	gpioleds {
+		/delete-node/ sys_led;
+	};
 };
 
 &ethmac {
 	internal_phy = <0>;
 };
 
-&i2c3 {
-	status = "okay";
+&usb3_phy_v2 {
+	otg = <0>;
+};
 
+&i2c3 {
 	bct3236@3c {
 		compatible = "amlogic,bct3236_led";
 		reg = <0x3c>;
