vim4/t7 dts: eliminate u-boot errors
## Flattened Device Tree blob at 01000000
   Booting using the fdt blob at 0x1000000
   Uncompressing Kernel Image ...    Uncompressing Kernel Image ... OK
   Loading Ramdisk to 7f459000, end 7f7ff961 ... OK
[rsvmem] bl31 reserved memory set alloc-ranges error.
libfdt fdt_getprop(): FDT_ERR_NOTFOUND
   Loading Device Tree to 000000001ffe5000, end 000000001ffffa9e ... OK

--- a/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
@@ -17,10 +17,10 @@
 		ion_fb_reserved:linux,ion-fb {
 			size = <0x00000000 0x11000000>;
 		};
+	};
 
-		secmon_reserved:linux,secmon {
-			/delete-property/ alloc-ranges;
-		};
+	secmon {
+		clear_range = <0x05100000 0x02a00000>;
 	};
 
 	/delete-node/ hdmirx;
