DT: g12b: fix multi-di compatible typo

--- a/arch/arm64/boot/dts/amlogic/coreelec_g12b_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_g12b_common.dtsi
@@ -38,6 +38,10 @@
 		};
 	};
 
+	multi-di {
+		compatible = "amlogic, dim-g12b";
+	};
+
 	meson-ir {
 		reg = <0x0 0xff808040 0x00 0x44>, /*Multi-format IR controller*/
 			<0x0 0xff808000 0x00 0x20>; /*Legacy IR controller*/
