--- a/sound/soc/codecs/amlogic/Makefile
+++ b/sound/soc/codecs/amlogic/Makefile
@@ -76,6 +76,13 @@ obj-$(CONFIG_AMLOGIC_SND_SOC_TAS5805m) += $(MODULE_NAME_TAS5805M).o
 CFLAGS_tas5805m.o += $(PR_FMT_DEFINE_TAS5805M)
 $(MODULE_NAME_TAS5805M)-y += tas5805m.o
 
+MODULE_NAME_ES8388 = amlogic-snd-codec-es8388
+PR_FMT_ES8388= $(subst amlogic-,,$(MODULE_NAME_ES8388))
+PR_FMT_DEFINE_ES8388 = "-Dpr_fmt(fmt)= \"[$(PR_FMT_ES8388)]: \" fmt"
+obj-$(CONFIG_AMLOGIC_SND_SOC_ES8388) += $(MODULE_NAME_ES8388).o
+CFLAGS_es8388.o += $(PR_FMT_DEFINE_ES8388)
+$(MODULE_NAME_ES8388)-y += es8388.o
+
 MODULE_NAME_AD82128 = amlogic-snd-codec-ad82128
 PR_FMT_AD82128 = $(subst amlogic-,,$(MODULE_NAME_AD82128))
 PR_FMT_DEFINE_AD82128 = "-Dpr_fmt(fmt)= \"[$(PR_FMT_AD82128)]: \" fmt"
