DT: add support of S928X, Tencent Aurora 5X

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -2,6 +2,17 @@
 	coreelec;
 	/delete-property/ amlogic-dt-id;
 
+	reserved-memory {
+		codec_mm_cma:linux,codec_mm_cma {
+			size = <0x0 0x2fc00000>;
+		};
+
+		ion_fb_reserved:linux,ion-fb {
+			/* 1920x1080x4x4 round up 4M align */
+			size = <0x0 0x11000000>;
+		};
+	};
+
 	gpioleds {
 		compatible = "gpio-leds";
 		status = "okay";
