DT: use different compatible for gpu

--- a/arch/arm64/boot/dts/amlogic/coreelec_s4_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_s4_common.dtsi
@@ -48,6 +48,10 @@
 		reset-gpios = <&gpio GPIOB_9 GPIO_ACTIVE_LOW>;
 	};
 
+	gpu:bifrost {
+		compatible = "arm,mali-bifrost";
+	};
+
 	/delete-node/ auge_sound;
 	auge_sound {
 		compatible = "amlogic, auge-sound-card";
