--- a/arch/arm64/boot/dts/amlogic/coreelec_s5_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_s5_common.dtsi
@@ -8,6 +8,10 @@
 		};
 	};
 
+	gpu:valhall {
+		compatible = "arm,mali-valhall";
+	};
+
 	reserved-memory {
 		di_cma_reserved:linux,di_cma {
 			size = <0x0 0x400000>;
