--- a/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
@@ -9,6 +9,10 @@
 		};
 	};
 
+	gpu:bifrost {
+		compatible = "arm,mali-bifrost";
+	};
+
 	reserved-memory {
 		ion_cma_reserved:linux,ion-dev {
 			size = <0x00000000 0x09800000>;
