DT: add Ugoos AM6

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -5,6 +5,8 @@ dtb-y += g12b_s922x_beelink_gt_king.dtb
 dtb-y += g12b_s922x_beelink_gs_king_x.dtb
 dtb-y += g12b_s922x_minix_u22xj_max.dtb
 dtb-y += g12b_s922x_odroid_n2.dtb
+dtb-y += g12b_s922x_ugoos_am6_2g.dtb
+dtb-y += g12b_s922x_ugoos_am6_4g.dtb
 dtb-y += s4_s905w2_2g.dtb
 dtb-y += s4_s905w2_4g.dtb
 dtb-y += s4_s905y4_2g.dtb
