--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -18,6 +18,11 @@ dtb-y += s4_s905y4_4g.dtb
 dtb-y += s4_s905y4_buzztv_hd5_2g.dtb
 dtb-y += s4_s905y4_buzztv_hd5_4g.dtb
 dtb-y += s4_s905y4_khadas_vim1s.dtb
+dtb-y += sm1_s905x3_2g.dtb
+dtb-y += sm1_s905x3_2g_1gbit.dtb
+dtb-y += sm1_s905x3_4g.dtb
+dtb-y += sm1_s905x3_4g_1gbit.dtb
+dtb-y += sm1_s905x3_bananapi_m5.dtb
 dtb-y += sc2_s905x4_2g.dtb
 dtb-y += sc2_s905x4_2g_1gbit.dtb
 dtb-y += sc2_s905x4_4g.dtb
