--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -23,6 +23,7 @@ dtb-y += sm1_s905x3_2g_1gbit.dtb
 dtb-y += sm1_s905x3_4g.dtb
 dtb-y += sm1_s905x3_4g_1gbit.dtb
 dtb-y += sm1_s905d3_khadas_vim3l.dtb
+dtb-y += sm1_s905x3_bananapi_m2pro.dtb
 dtb-y += sm1_s905x3_bananapi_m5.dtb
 dtb-y += sm1_s905x3_odroid_c4.dtb
 dtb-y += sc2_s905x4_2g.dtb
