--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -5,6 +5,7 @@ dtb-y += g12a_s905x2_4g.dtb
 dtb-y += g12a_s905x2_4g_1gbit.dtb
 dtb-y += g12a_s905y2_2g.dtb
 dtb-y += g12a_s905y2_4g.dtb
+dtb-y += g12a_s905y2_radxa_zero.dtb
 dtb-y += g12b_a311d_bananapi_m2s.dtb
 dtb-y += g12b_a311d_khadas_vim3.dtb
 dtb-y += g12b_a311d_radxa_zero2.dtb
