--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -3,6 +3,8 @@ dtb-y += g12a_s905x2_2g.dtb
 dtb-y += g12a_s905x2_2g_1gbit.dtb
 dtb-y += g12a_s905x2_4g.dtb
 dtb-y += g12a_s905x2_4g_1gbit.dtb
+dtb-y += g12a_s905x2_beelink_gt_mini_a_2g.dtb
+dtb-y += g12a_s905x2_beelink_gt_mini_a_4g.dtb
 dtb-y += g12a_s905y2_2g.dtb
 dtb-y += g12a_s905y2_4g.dtb
 dtb-y += g12a_s905y2_radxa_zero.dtb
