--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -13,6 +13,7 @@ dtb-y += g12a_s905y2_radxa_zero.dtb
 dtb-y += g12b_a311d_bananapi_m2s.dtb
 dtb-y += g12b_a311d_khadas_vim3.dtb
 dtb-y += g12b_a311d_radxa_zero2.dtb
+dtb-y += g12b_a311d_libre_computer_alta.dtb
 dtb-y += g12b_s922x_bananapi_m2s.dtb
 dtb-y += g12b_s922x_beelink_gt_king.dtb
 dtb-y += g12b_s922x_beelink_gs_king_x.dtb
