DT: disable drm cvbs connector Use only HDMI connector as output

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -133,3 +133,7 @@
 	/delete-property/ overwrite_crtcmask_of_video;
 	dummyl_from_hdmitx = /bits/ 8  <1>;
 };
+
+&drm_amcvbsout {
+	status = "disabled";
+};
