DT:coreelec_common: remove 'reg' for external_phy This enable auto scan for PHYs.

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -131,6 +131,12 @@
 	/delete-property/ vrr_type;
 };
 
+&ext_mdio {
+	external_phy: ethernet-phy@0 {
+		/delete-property/ reg;
+	};
+};
+
 &ethmac {
 	wol = <0>;
 };
