DT: S5: set wifi static buf on linux 5.4.210 it is called dhd_static_buf

--- a/arch/arm64/boot/dts/amlogic/coreelec_s5_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_s5_common.dtsi
@@ -190,3 +190,7 @@
 	/delete-property/ pinctrl-names;
 	/delete-property/ gpio;
 };
+
+&aml_wifi {
+	wifi_static_buf = <2>;  /* dhd wifi for android */
+};
