--- a/arch/arm64/boot/dts/amlogic/coreelec_sm1_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_sm1_common.dtsi
@@ -219,6 +219,9 @@
 &audiobus {
 	aml_i2s2hdmi: i2s2hdmi {
 		compatible = "amlogic, sm1-snd-tdmc";
+		clocks = <&clkaudio CLKID_AUDIO_MCLK_C
+				 &clkc CLKID_MPLL2>;
+		clock-names = "mclk", "clk_srcpll";
 	};
 
 	tdmb: tdm@1 {
