--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -33,6 +33,7 @@ dtb-y += s4_s905y4_khadas_vim1s.dtb
 dtb-y += s5_s928x_tencent_aurora_5x.dtb
 dtb-y += s5_s928x_ugoos_am8_4g.dtb
 dtb-y += s5_s928x_ugoos_am8_8g.dtb
+dtb-y += s5_s928x_ugoos_sk1_8g.dtb
 dtb-y += s5_s928x_x96_x10_4g.dtb
 dtb-y += s5_s928x_x96_x10_8g.dtb
 dtb-y += sm1_s905d3_libre_computer_solitude.dtb
