--- a/arch/arm64/boot/dts/amlogic/g12b_s922x_minix_u22xj_max.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_s922x_minix_u22xj_max.dts
@@ -24,6 +24,8 @@
 	/delete-node/ rtc;
 
 	auge_sound {
+		/delete-property/ avout_mute-gpios;
+
 		aml-audio-card,dai-link@1 {
 			codec {
 				sound-dai = <&es8316>;
