--- a/arch/arm64/boot/dts/amlogic/g12b_s922x_minix_u22xj_max.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_s922x_minix_u22xj_max.dts
@@ -132,3 +132,7 @@
 	gpio-vbus-power = "GPIOH_5";
 	gpios = <&gpio GPIOH_5 GPIO_ACTIVE_HIGH>;
 };
+
+&vddio_c {
+	gpio = <&gpio_ao GPIOAO_2 GPIO_ACTIVE_HIGH>;
+};
