DT: On S5 use TDM-C for analog output

--- a/arch/arm64/boot/dts/amlogic/coreelec_g12b_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_g12b_common.dtsi
@@ -169,6 +169,8 @@
 
 &audiobus {
 	/delete-node/ tdm@1;
+	/delete-node/ tdmc;
+	/delete-node/ tdm@2;
 	/delete-node/ spdif@0;
 	/delete-node/ spdif@1;
 
