--- a/arch/arm64/boot/dts/amlogic/coreelec_g12a_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_g12a_common.dtsi
@@ -172,6 +172,9 @@
 };
 
 &audiobus {
+	/delete-node/ tdmc;
+	/delete-node/ tdm@2;
+
 	aml_i2s2hdmi: i2s2hdmi {
 		compatible = "amlogic, g12a-snd-tdmc";
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_C
