--- a/arch/arm64/boot/dts/amlogic/coreelec_s4_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_s4_common.dtsi
@@ -139,6 +139,9 @@
 };
 
 &audiobus {
+	/delete-node/ tdmc;
+	/delete-node/ tdm@2;
+
 	aml_i2s2hdmi: i2s2hdmi {
 		compatible = "amlogic, t5-snd-tdmc";
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_C
