--- a/arch/arm64/boot/dts/amlogic/coreelec_sc2_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_sc2_common.dtsi
@@ -128,6 +128,9 @@
 };
 
 &audiobus {
+	/delete-node/ tdmc;
+	/delete-node/ tdm@2;
+
 	aml_i2s2hdmi: i2s2hdmi {
 		compatible = "amlogic, tm2-revb-snd-tdmc";
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_C
