--- a/arch/arm64/boot/dts/amlogic/coreelec_sm1_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_sm1_common.dtsi
@@ -217,6 +217,9 @@
 };
 
 &audiobus {
+	/delete-node/ tdmc;
+	/delete-node/ tdm@2;
+
 	aml_i2s2hdmi: i2s2hdmi {
 		compatible = "amlogic, sm1-snd-tdmc";
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_C
