--- a/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_t7_common.dtsi
@@ -255,27 +255,35 @@
 };
 
 &audiobus {
+	/delete-node/ tdmc;
+	/delete-node/ tdm@2;
+
 	aml_i2s2hdmi: i2s2hdmi {
 		compatible = "amlogic, t7-snd-tdmc";
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_C
 				&clkc CLKID_MPLL2>;
 		clock-names = "mclk", "clk_srcpll";
 	};
+
 	tdm@1 {
 		/delete-property/ tdmin-src-name;
 		/delete-property/ ctrl_gain;
 		/delete-node/ Channel_Mask;
 	};
+
 	resample@0 {
 		status = "disabled";
 	};
+
 	/delete-node/ resample@1;
+
 	loopback@0 {
 		datain_chnum = <0>;
 		datain_chmask = <0x0>;
 		/* config which data pin for loopback */
 		datain-lane-mask-in = <0 0 0 0>;
 	};
+
 	spdif@0 {
 		/delete-property/ samesource_sel;
 	};
