hdmitx: add support of custom EDID Read string /amhdmitx/custom_edid from dtb.img.

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -132,6 +132,7 @@
 };
 
 &amhdmitx {
+	custom_edid = "";
 	max_refreshrate = <120>;
 	/delete-property/ hdcp_ctl_lvl;
 	/delete-property/ vrr_type;
